<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="default_notification_channel_id">channelId</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="download">Download</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download_image">download image</string>
    <string name="check_status">Check the status</string>

    <string name="glide_name">Glide-Image Loading Library by BumpTech</string>
    <string name="load_app_name">LoadApp-Current repository by Udacity</string>
    <string name="retrofit_name">Retrofit-Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="warning">Please select an option</string>

</resources>
